--- a/latex/acknowledgments.tex
+++ b/latex/acknowledgments.tex
@@ -8,6 +8,7 @@ I also extend my deepest gratitude to the remainder of my committee for their pa
 
 In no particular order, I am indebted to:
 \begin{itemize}
+\item Leeia for being my best friend and biggest fan, and for supporting me through every trial and tribulation on the path to complete this;
 \item Drs. David Yuen, Bengt Fornberg, Grady Wright, John Burkardt and Kiran Katta for their support and feedback on numerical modeling;
 \item the RBF research group at CU-Boulder for a number of ideas that led to interesting investigations;
 \item Dr. Geoff Womeldorff for insightful discussion and the high resolution Spherical CVT meshes tested herein;
