--- a/latex/dedication.tex
+++ b/latex/dedication.tex
@@ -1,6 +1,6 @@
 
 \begin{dedication}
-This work is dedicated to the one who taught me patience, compassion, bravery, and determination. Thank you, mom.
+This work is dedicated to the one who taught me patience, compassion, bravery, and determination. Thank you, Mom.
   
 \begin{center}
 \emph{--E}
