final revisions requested by clearance advisor

--- a/latex/acknowledgments.tex
+++ b/latex/acknowledgments.tex
@@ -8,14 +8,14 @@ I also extend my deepest gratitude to the remainder of my committee for their pa
 
 In no particular order, I am indebted to:
 \begin{itemize}
-\item Leeia for being my best friend and biggest fan, and for supporting me through every trial and tribulation on the path to complete this;
+\item Leeia for being my best friend, biggest fan, and for supporting me through every trial and tribulation on the path to complete this work;
 \item Drs. David Yuen, Bengt Fornberg, Grady Wright, John Burkardt and Kiran Katta for their support and feedback on numerical modeling;
 \item the RBF research group at CU-Boulder for a number of ideas that led to interesting investigations;
 \item Dr. Geoff Womeldorff for insightful discussion and the high resolution Spherical CVT meshes tested herein;
 \item Steven Henke for a number of discussions regarding our concurrent investigations into space-filling curves, neighbor queries, and GPU computing;
 \item Brent Swartz, Yectli Huerta, Andrew Ring, and the rest of the University of Minnesota Supercomputing Institute for playing sounding board to my ideas and providing access to computational resources;
 \item the faculty and students in the FSU Department of Scientific Computing (DSC) who built a community of collaboration and interdisciplinary research that I am proud to be part of;
-\item the DSC staff for their tireless support and assistance;  
+\item the DSC staff (esp. Cecelia Farmer, Maribel Amwake, Dawn Singleton and Risette Posey) for their tireless support and assistance;  
 \item and past and present students in Gordon's research group (esp. Ian Johnson, Andrew Young, and Nathan Crock) for brainstorming sessions, weekend hack-a-thons and camaraderie.
 \end{itemize}
 
