--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -25,7 +25,7 @@
 
 { \graphicspath{{rbffd_methods_content/}} 
 
-\part{Preliminaries}
+%\part{Preliminaries}
 
 
 \chapter{RBF Methods for PDEs}
@@ -561,7 +561,7 @@ Most recently, Fornberg et al. \cite{Fornberg2012} introduced a new method calle
 Benchmarks provided in \cite{Fornberg2012} rank the stable methods for RBFs from fastest to slowest as: RBF-Direct, RBF-GA, and then RBF-QR. Keeping a perspective on run-times, the authors note that RBF-GA is roughly 10x slower than RBF-Direct and RBF-QR is another 2x-4x slower than RBF-GA \cite{Fornberg2012}.
 
 
-\part{RBF-FD for HPC Environments}
+%\part{RBF-FD for HPC Environments}
 
 \chapter{Introduction to the RBF-FD Method}
 \label{chap:rbffd_method}
